@startuml

title __COMMAND's Class Diagram__\n

  package main {
    package main.game {
      package main.game.command {
        abstract class Command {
            + command : String
            + description : String
            + Command()
            {abstract} + execute()
        }
      }
    }
  }
  

  package main {
    package main.game {
      package main.game.command {
        class DrawMap {
            + DrawMap()
            + paint()
        }
      }
    }
  }
  

  package main {
    package main.game {
      package main.game.command {
        class MoveCarCommand {
            + MoveCarCommand()
            + execute()
        }
      }
    }
  }
  

  package main {
    package main.game {
      package main.game.command {
        class NewCarCommand {
            + NewCarCommand()
            + execute()
        }
      }
    }
  }
  

  MoveCarCommand -up-|> Command
  NewCarCommand -up-|> Command
  NewCarCommand o-- Car : car


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
